infra/k8s/infra-db/pgadmin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: infra
spec:
  type: ClusterIP
  selector:
    app: pgadmin
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
