infra/k8s/infra-db/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: infra
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
